--- a/TakeAIMeal.Common.Services/TakeAIMeal.Common.Services.csproj
+++ b/TakeAIMeal.Common.Services/TakeAIMeal.Common.Services.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Handlers\" />
     <Folder Include="Logic\" />
   </ItemGroup>
 
@@ -15,6 +14,10 @@
     <PackageReference Include="Refit" Version="6.3.2" />
     <PackageReference Include="Refit.HttpClientFactory" Version="6.3.2" />
     <PackageReference Include="Refit.Newtonsoft.Json" Version="6.3.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TakeAIMeal.Common\TakeAIMeal.Common.csproj" />
   </ItemGroup>
 
 </Project>
