--- a/TakeAIMeal.Common/TakeAIMeal.Common.csproj
+++ b/TakeAIMeal.Common/TakeAIMeal.Common.csproj
@@ -3,14 +3,12 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Configurations\" />
     <Folder Include="Dictionaries\" />
     <Folder Include="Extensions\" />
-    <Folder Include="Options\" />
   </ItemGroup>
 
 </Project>
