--- a/TakeAIMeal.API/TakeAIMeal.API.csproj
+++ b/TakeAIMeal.API/TakeAIMeal.API.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Refit" Version="6.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TakeAIMeal.Common.Services\TakeAIMeal.Common.Services.csproj" />
   </ItemGroup>
 
 </Project>
