--- a/TakeAIMeal.Data/TakeAIMeal.Data.csproj
+++ b/TakeAIMeal.Data/TakeAIMeal.Data.csproj
@@ -8,11 +8,11 @@
 
   <ItemGroup>
     <Folder Include="Configuration\" />
-    <Folder Include="Entities\" />
     <Folder Include="Interface\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
   </ItemGroup>
