--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
   inputs:
     command: 'custom'
     workingDir: 'TakeAIMeal.WebUI'
-    customCommand: 'npm run build'
+    customCommand: 'run build'
 
 - task: DotNetCoreCLI@2
   inputs:
