--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,12 +38,14 @@ steps:
     command: 'build'
     projects: '$(solution)'
     arguments: '--output publish-output --configuration $(buildConfiguration)'
-- task: VSBuild@1
+
+- task: ArchiveFiles@2
   inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
 
 - task: AzureRmWebAppDeployment@4
   inputs:
