--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ steps:
     rootFolderOrFile: 'publish_output'
     includeRootFolder: false
     archiveType: 'zip'
-    archiveFile: '$(System.DefaultWorkingDirectory)/**/$(Build.BuildId).zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
 
 - task: AzureRmWebAppDeployment@4
@@ -53,4 +53,4 @@ steps:
     azureSubscription: 'Private(df289f54-c76c-4ea5-a1fb-aeba008c3983)'
     appType: 'webApp'
     WebAppName: 'take-ai-meal-app'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
