--- a/TakeAIMeal.API/appsettings.json
+++ b/TakeAIMeal.API/appsettings.json
@@ -14,6 +14,10 @@
     "ApiUrl": "https://language-take-ai-meal.cognitiveservices.azure.com",
     "ApiKey": ""
   },
+  "CognitiveTranslate": {
+    "ApiUrl": "https://api.cognitive.microsofttranslator.com/",
+    "ApiKey": ""
+  },
   "ConnectionStrings": {
     "TakeAIMealDbConnection": "Server=tcp:sqlsrv-take-ai-meal.database.windows.net,1433;Initial Catalog=sqldb-take-ai-meal;Persist Security Info=False;User ID=takeaimeal-admin;Password=6m9Aa5E53we3dqC;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
