--- a/TakeAIMeal.API.Services/TakeAIMeal.API.Services.csproj
+++ b/TakeAIMeal.API.Services/TakeAIMeal.API.Services.csproj
@@ -3,14 +3,16 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Logic\" />
-    <Folder Include="Models\" />
     <Folder Include="Mappings\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TakeAIMeal.Common.Services\TakeAIMeal.Common.Services.csproj" />
+    <ProjectReference Include="..\TakeAIMeal.Functions.Services\TakeAIMeal.Functions.Services.csproj" />
   </ItemGroup>
 
 </Project>
