--- a/TakeAIMeal.API.Services/TakeAIMeal.API.Services.csproj
+++ b/TakeAIMeal.API.Services/TakeAIMeal.API.Services.csproj
@@ -11,7 +11,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TakeAIMeal.Common.Services\TakeAIMeal.Common.Services.csproj" />
+    <ProjectReference Include="..\TakeAIMeal.Data\TakeAIMeal.Data.csproj" />
     <ProjectReference Include="..\TakeAIMeal.Functions.Services\TakeAIMeal.Functions.Services.csproj" />
   </ItemGroup>
 
