--- a/TakeAIMeal.WebUI/package.json
+++ b/TakeAIMeal.WebUI/package.json
@@ -13,7 +13,8 @@
     "jest": "^29.5.0",
     "jest-editor-support": "^31.0.1",
     "vue": "^3.2.13",
-    "vue-i18n": "^9.1.0"
+    "vue-i18n": "^9.1.0",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
