--- a/TakeAIMeal.WebUI/package.json
+++ b/TakeAIMeal.WebUI/package.json
@@ -9,6 +9,7 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/i18n/**/*.json\""
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "core-js": "^3.8.3",
     "jest": "^29.5.0",
     "jest-editor-support": "^31.0.1",
