--- a/TakeAIMeal.WebUI/package.json
+++ b/TakeAIMeal.WebUI/package.json
@@ -15,7 +15,8 @@
     "jest-editor-support": "^31.0.1",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
