--- a/TakeAIMeal.Data.Repositories/TakeAIMeal.Data.Repositories.csproj
+++ b/TakeAIMeal.Data.Repositories/TakeAIMeal.Data.Repositories.csproj
@@ -3,12 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Infrastructure\" />
+    <ProjectReference Include="..\TakeAIMeal.Data\TakeAIMeal.Data.csproj" />
   </ItemGroup>
 
 </Project>
