Add dictionary service

--- a/TakeAIMeal.API.Services/TakeAIMeal.API.Services.csproj
+++ b/TakeAIMeal.API.Services/TakeAIMeal.API.Services.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TakeAIMeal.Common.Services\TakeAIMeal.Common.Services.csproj" />
+    <ProjectReference Include="..\TakeAIMeal.Data.Repositories\TakeAIMeal.Data.Repositories.csproj" />
     <ProjectReference Include="..\TakeAIMeal.Data\TakeAIMeal.Data.csproj" />
     <ProjectReference Include="..\TakeAIMeal.Functions.Services\TakeAIMeal.Functions.Services.csproj" />
   </ItemGroup>
