Work in progress

--- a/TakeAIMeal.Common/TakeAIMeal.Common.csproj
+++ b/TakeAIMeal.Common/TakeAIMeal.Common.csproj
@@ -12,10 +12,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Prompts.resx</DependentUpon>
     </Compile>
-    <Compile Update="Resources\Recipe.Designer.cs">
+    <Compile Update="Resources\Recipes.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Recipe.resx</DependentUpon>
+      <DependentUpon>Recipes.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -24,9 +24,9 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Prompts.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Update="Resources\Recipe.resx">
+    <EmbeddedResource Update="Resources\Recipes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Recipe.Designer.cs</LastGenOutput>
+      <LastGenOutput>Recipes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
