Add recipe generation log procedure

--- a/TakeAIMeal.Data.Repositories/TakeAIMeal.Data.Repositories.csproj
+++ b/TakeAIMeal.Data.Repositories/TakeAIMeal.Data.Repositories.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TakeAIMeal.Common\TakeAIMeal.Common.csproj" />
     <ProjectReference Include="..\TakeAIMeal.Data\TakeAIMeal.Data.csproj" />
   </ItemGroup>
 
